force-app/main/default/objects/Account/fields/RegimeExclusivo__c.field-meta.xml
<CustomField>
    <fullName>RegimeExclusivo__c</fullName>
    <label>Local Content Regime</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Exclusive Regime</fullName>
            </value>
            <value>
                <fullName>Mixed Regime</fullName>
            </value>
            <value>
                <fullName>Non-Exclusive Regime</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>