force-app/main/default/objects/Account/fields/T_Account_with_BM_Request__c.field-meta.xml
<CustomField>
    <fullName>T_Account_with_BM_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Account with BM Request</label>
    <type>Checkbox</type>
</CustomField>