force-app/main/default/objects/Account/fields/T_Quantity_of_Service_Supplier_Category__c.field-meta.xml
<CustomField>
    <fullName>T_Quantity_of_Service_Supplier_Category__c</fullName>
    <description>Number of supplier category records of type service.</description>
    <inlineHelpText>Number of supplier category records of type service.</inlineHelpText>
    <label>Quantity of Service Supplier Category</label>
    <summaryFilterItems>
        <field>TW1_Vendor_Category__c.T_Category_Type__c</field>
        <operation>equals</operation>
        <value>Service</value>
    </summaryFilterItems>
    <summaryForeignKey>TW1_Vendor_Category__c.TW1_Vendor__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>