force-app/main/default/objects/Account/fields/T_QuantityMaterialSupplierCategory__c.field-meta.xml
<CustomField>
    <fullName>T_QuantityMaterialSupplierCategory__c</fullName>
    <label>Quantity of Material Supplier Category</label>
    <summaryFilterItems>
        <field>TW1_Vendor_Category__c.T_Category_Type__c</field>
        <operation>equals</operation>
        <value>Material</value>
    </summaryFilterItems>
    <summaryForeignKey>TW1_Vendor_Category__c.TW1_Vendor__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>