force-app/main/default/objects/Account/fields/TCF_HSEQResponsible__c.field-meta.xml
<CustomField>
    <fullName>TCF_HSEQResponsible__c</fullName>
    <label>HSEQ Responsible</label>
    <length>255</length>
    <type>Text</type>
</CustomField>