force-app/main/default/objects/Account/fields/TCF_HSEQResponsibleEmail__c.field-meta.xml
<CustomField>
    <fullName>TCF_HSEQResponsibleEmail__c</fullName>
    <label>HSEQ Responsible Email</label>
    <type>Email</type>
</CustomField>