force-app/main/default/objects/Account/fields/TCF_HSEQResponsiblePhone__c.field-meta.xml
<CustomField>
    <fullName>TCF_HSEQResponsiblePhone__c</fullName>
    <label>HSEQ Responsible Phone</label>
    <type>Phone</type>
</CustomField>