force-app/main/default/objects/Account/fields/TCF_HSSE_Risk__c.field-meta.xml
<CustomField>
    <fullName>TCF_HSSE_Risk__c</fullName>
    <label>HSSE Risk</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TGP_HSSE_Risk</valueSetName>
    </valueSet>
</CustomField>