force-app/main/default/objects/Account/fields/TCF_MonitoringAccepted__c.field-meta.xml
<CustomField>
    <fullName>TCF_MonitoringAccepted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Monitoring Accepted</label>
    <type>Checkbox</type>
</CustomField>