force-app/main/default/objects/Account/fields/TW1_CNPJ__c.field-meta.xml
<CustomField>
    <fullName>TW1_CNPJ__c</fullName>
    <label>CNPJ</label>
    <length>14</length>
    <type>Text</type>
</CustomField>