force-app/main/default/objects/Account/fields/TW1_Company_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>TW1_Company_Email_Address__c</fullName>
    <label>Company Email Address</label>
    <type>Email</type>
</CustomField>