force-app/main/default/objects/Account/fields/TW1_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>TW1_Company_Name__c</fullName>
    <label>Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>