force-app/main/default/objects/Account/fields/TW1_Contact_email_address__c.field-meta.xml
<CustomField>
    <fullName>TW1_Contact_email_address__c</fullName>
    <label>Contact email address</label>
    <type>Email</type>
</CustomField>