force-app/main/default/objects/Account/fields/TW1_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>TW1_Contact_Name__c</fullName>
    <label>Contact Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>