force-app/main/default/objects/Account/fields/TW1_Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>TW1_Contact_Number__c</fullName>
    <label>Contact Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>