force-app/main/default/objects/Account/fields/TW1_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>TW1_Contact_Phone__c</fullName>
    <label>Contact Phone</label>
    <type>Phone</type>
</CustomField>