force-app/main/default/objects/Account/fields/TW1_CPF__c.field-meta.xml
<CustomField>
    <fullName>TW1_CPF__c</fullName>
    <label>CPF</label>
    <length>11</length>
    <type>Text</type>
</CustomField>