force-app/main/default/objects/Account/fields/TW1_Form_creation_date__c.field-meta.xml
<CustomField>
    <fullName>TW1_Form_creation_date__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Form creation date</label>
    <type>DateTime</type>
</CustomField>