force-app/main/default/objects/Account/fields/TW1_Homologation_Conclusion_Date__c.field-meta.xml
<CustomField>
    <fullName>TW1_Homologation_Conclusion_Date__c</fullName>
    <label>Homologation Conclusion Date</label>
    <type>Date</type>
</CustomField>