force-app/main/default/objects/Account/fields/TW1_Previous_Contract_Amount__c.field-meta.xml
<CustomField>
    <fullName>TW1_Previous_Contract_Amount__c</fullName>
    <label>Previous Contract Amount</label>
    <summarizedField>TW1_MODEC_Contract__c.TW1_Contracted_Value_B__c</summarizedField>
    <summaryForeignKey>TW1_MODEC_Contract__c.TW1_Vendor__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>