force-app/main/default/objects/Account/fields/TW1_SAP_Code__c.field-meta.xml
<CustomField>
    <fullName>TW1_SAP_Code__c</fullName>
    <label>SAP Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>