force-app/main/default/objects/Account/fields/TW1_Shelf_Life_Vetting_Date__c.field-meta.xml
<CustomField>
    <fullName>TW1_Shelf_Life_Vetting_Date__c</fullName>
    <label>Vetting expiration date</label>
    <type>Date</type>
</CustomField>