force-app/main/default/objects/Account/fields/TW1_Step_Owner__c.field-meta.xml
<CustomField>
    <fullName>TW1_Step_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Step Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Supplier</relationshipName>
    <type>Lookup</type>
</CustomField>