force-app/main/default/objects/Account/fields/TW1_Supplier_Salesforce_Id__c.field-meta.xml
<CustomField>
    <fullName>TW1_Supplier_Salesforce_Id__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supplier Salesforce Id</label>
    <type>Text</type>
</CustomField>