force-app/main/default/objects/Account/fields/TW1_Supplier_Type__c.field-meta.xml
<CustomField>
    <fullName>TW1_Supplier_Type__c</fullName>
    <label>Supplier Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>BANK</fullName>
            </value>
            <value>
                <fullName>GOVERNMENT OFFICE</fullName>
            </value>
            <value>
                <fullName>INDIRECTLY AFFILIATED COMPANY</fullName>
            </value>
            <value>
                <fullName>INDIVIDUAL REAL ESTATE OWNER</fullName>
            </value>
            <value>
                <fullName>LAW FIRM</fullName>
            </value>
            <value>
                <fullName>MUNICIPALITY</fullName>
            </value>
            <value>
                <fullName>NON-PROFIT PROFESSIONAL TRADE ORGANIZATION</fullName>
            </value>
            <value>
                <fullName>OTHER</fullName>
            </value>
            <value>
                <fullName>STATE UNIVERSITY</fullName>
            </value>
            <value>
                <fullName>TAX/AUDIT FIRM</fullName>
            </value>
            <value>
                <fullName>TAXING AUTHORITY</fullName>
            </value>
            <value>
                <fullName>UTILITY PROVIDER</fullName>
            </value>
            <value>
                <fullName>WORLDWIDE TRANSPORTATION</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>