force-app/main/default/objects/Account/fields/TW1_Vendor_Vetting__c.field-meta.xml
<CustomField>
    <fullName>TW1_Vendor_Vetting__c</fullName>
    <defaultValue>&quot;Vetting Not Requested&quot;</defaultValue>
    <label>Vendor Vetting</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>No Registered</fullName>
            </value>
            <value>
                <fullName>Ongoing</fullName>
            </value>
            <value>
                <fullName>Blocked</fullName>
            </value>
            <value>
                <fullName>Vetting Not Requested</fullName>
            </value>
            <value>
                <fullName>Vetting Rejected</fullName>
            </value>
            <value>
                <fullName>Vetting Approved with Red Flag</fullName>
            </value>
            <value>
                <fullName>Vetting Approved</fullName>
            </value>
            <value>
                <fullName>Vetting Expired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>