force-app/main/default/objects/Account/fields/TW2_Ninea__c.field-meta.xml
<CustomField>
    <fullName>TW2_Ninea__c</fullName>
    <label>Ninea</label>
    <length>50</length>
    <type>Text</type>
</CustomField>