force-app/main/default/objects/Account/fields/TW3_Taxpayer_Identification__c.field-meta.xml
<CustomField>
    <fullName>TW3_Taxpayer_Identification__c</fullName>
    <label>Taxpayer Identification</label>
    <length>60</length>
    <type>Text</type>
</CustomField>