force-app/main/default/objects/Account/fields/TW4_Status_HSEQ__c.field-meta.xml
<CustomField>
    <fullName>TW4_Status_HSEQ__c</fullName>
    <label>Status HSEQ</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Reproved</fullName>
            </value>
            <value>
                <fullName>Pending Audit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>