force-app/main/default/objects/Account/recordTypes/TW1_Vendor_Homologated.recordType-meta.xml
<RecordType>
    <fullName>TW1_Vendor_Homologated</fullName>
    <active>true</active>
    <label>Supplier Homologated</label>
</RecordType>