force-app/main/default/objects/Account/recordTypes/TW3_Supplier_Not_Homologated_Senegal.recordType-meta.xml
<RecordType>
    <fullName>TW3_Supplier_Not_Homologated_Senegal</fullName>
    <active>true</active>
    <label>Supplier Not Homologated - Senegal</label>
</RecordType>