force-app/main/default/objects/Account/listViews/AllAccounts.listView-meta.xml
<ListView>
    <fullName>AllAccounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>TW1_Vendor_Vetting__c</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TW3_From_Portal__c</field>
        <operation>equals</operation>
        <value>Senegal</value>
    </filters>
    <filters>
        <field>TW1_Vendor_Vetting__c</field>
        <operation>equals</operation>
        <value>Active,Vetting Approved with Red Flag,Vetting Approved</value>
    </filters>
    <label>All Accounts</label>
</ListView>