force-app/main/default/objects/Account/listViews/Filter.listView-meta.xml
<ListView>
    <fullName>Filter</fullName>
    <booleanFilter>(1 OR 2) AND 3</booleanFilter>
    <columns>ACCOUNT.NAME</columns>
    <columns>ShortName__c</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Business</value>
    </filters>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>contains</operation>
        <value>MODEC</value>
    </filters>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>notContain</operation>
        <value>jaqueline</value>
    </filters>
    <label>NAM&apos;s Account</label>
    <sharedTo>
        <role>AMC_Fleet_Maintenance</role>
        <role>VesselContractAdministrator</role>
    </sharedTo>
</ListView>