force-app/main/default/objects/Account/listViews/TW1_Homologado.listView-meta.xml
<ListView>
    <fullName>TW1_Homologado</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.TW1_Vendor_Homologated</value>
    </filters>
    <label>Homologated</label>
</ListView>